Update 'hgvyc7iko-dotnet-basic' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-ad656543dc.xwcg.p3.openshiftapps.com/rhtap/rhtap-qe:9a6028694a127a57b5579c4783a8d7c941450ceb@sha256:783fbe9edbcb6c2c132d8d09c2137e1e6eca9fc79ce97ab014eed3cf030657b9

--- a/components/hgvyc7iko-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/hgvyc7iko-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hgvyc7iko-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-ad656543dc.xwcg.p3.openshiftapps.com/rhtap/rhtap-qe:9a6028694a127a57b5579c4783a8d7c941450ceb@sha256:783fbe9edbcb6c2c132d8d09c2137e1e6eca9fc79ce97ab014eed3cf030657b9
+          name: container-image
